# kei

./: .gitignore  Cargo.toml  OSDK.toml  PLAN.md  README.md  aarch64.ld  build_musl_rootfs.sh  init_shell.c  justfile  run_vm.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-kernel.yml  ci.yml  kei-lib-ci.yml  test-multi-arch.yml
bsp/: Cargo.toml
bsp/bcm2711/: Cargo.toml
bsp/jh7110/: Cargo.toml
bsp/rk3566/: Cargo.toml
bsp/rk3566/src/: ethernet.rs  lib.rs
configs/: nanopi-r3s.toml
configs/board/nanopi-r3s/: armbianEnv.txt  boot.cmd
docs/: arm64-status.md  index.md  lagrange.toml
docs/ar/: README.md  SUMMARY.md  aarch64-page-table-activation.md  aarch64-user-init-page-fault.md
docs/en/: SUMMARY.md
docs/en/guides/: kei-library.md
docs/es/: README.md  SUMMARY.md
docs/fr/: README.md  SUMMARY.md
docs/ja/: README.md  SUMMARY.md
docs/ko/: README.md  SUMMARY.md
docs/ru/: README.md  SUMMARY.md
docs/zhs/: README.md  SUMMARY.md
docs/zht/: README.md  SUMMARY.md
kernel/: Cargo.toml
kernel/comps/block/: Cargo.toml
kernel/comps/cmdline/: Cargo.toml
kernel/comps/console/: Cargo.toml
kernel/comps/framebuffer/: Cargo.toml
kernel/libs/comp-sys/component/: Cargo.toml
kernel/libs/comp-sys/component-macro/: Cargo.toml
kernel/libs/comp-sys/component/src/: lib.rs
kernel/libs/comp-sys/component/tests/init-order/: Cargo.toml
kernel/libs/comp-sys/component/tests/init-order/first-init/: Cargo.toml
kernel/libs/comp-sys/component/tests/init-order/second-init/: Cargo.toml
kernel/libs/comp-sys/component/tests/init-stage/: Cargo.toml
kernel/libs/comp-sys/component/tests/init-stage/foo/: Cargo.toml
kernel/src/: fb_console.rs  init.rs  lib.rs  vbe_dispi.rs
ostd/: Cargo.toml
ostd/src/: lib.rs
patches/arm64/: series
scripts/: build.py  build.sh  build_desktop_initramfs.py  dev-shell.sh  gen-patches.sh  initramfs.py  make_sdcard.py  pull-arm64.sh  pull_arm64.py  run_x86_64_qemu.sh  setup.sh  sync-upstream.sh  test-all-arch.sh  test.py  test.sh  test_all_arch.py  update.sh  vendor-upstream.sh  vendor_upstream.py
tests/: e2e_qemu_ignition.sh
tests/nixos/: Cargo.toml
tests/nixos/common/framework/: Cargo.toml
tests/nixos/common/test_macro/: Cargo.toml
tests/nixos/tests/ai-and-machine-learning/: Cargo.toml
tests/nixos/tests/cicd-and-devops/: Cargo.toml
tests/nixos/tests/communication/: Cargo.toml
tests/nixos/tests/containerization-and-virtualization/: Cargo.toml
tests/nixos/tests/databases-and-middleware/: Cargo.toml
tests/nixos/tests/development-tools/: Cargo.toml
tests/nixos/tests/development-tools-go/: Cargo.toml
tests/nixos/tests/development-tools-openjdk/: Cargo.toml
tests/nixos/tests/development-tools-python/: Cargo.toml
tests/nixos/tests/file-management-and-terminal/: Cargo.toml
tests/nixos/tests/hello/: Cargo.toml
tests/nixos/tests/monitoring-and-observability/: Cargo.toml
tests/nixos/tests/multimedia/: Cargo.toml
tests/nixos/tests/networking/: Cargo.toml
tests/nixos/tests/nix-and-nixos-tools/: Cargo.toml
tests/nixos/tests/office-and-productivity/: Cargo.toml
tests/nixos/tests/system-core/: Cargo.toml
tests/nixos/tests/web-browsers/: Cargo.toml
tests/nixos/tests/web-servers-and-proxies/: Cargo.toml
(+93 files in other folders)
