# kei — Asterinas ARM64 Distribution
#
# Host workspace for build tooling.
# The actual kernel workspace (ostd + kernel + bsp) lives in vendor/asterinas/
# after `just setup` populates it.

[workspace]
resolver = "2"

members = [
    "bsp/rk3566",
    "bsp/bcm2711",
    "bsp/jh7110",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "kei — Asterinas ARM64 Distribution"
repository = "https://github.com/celestia-island/kei"

# ── Build profiles ──────────────────────────────────────────

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 16
debug = 0
strip = true
