[workspace]
resolver = "2"
members = [
    "common/framework", "common/test_macro",
    "tests/*",
]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/asterinas/asterinas"
license = "MPL-2.0"
edition = "2024"

[workspace.dependencies]

nixos-test-framework = { path = "common/framework" }
nixos-test-macro = { path = "common/test_macro" }

inventory = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
rexpect = "0.6"
strip-ansi-escapes = "0.2"
syn = { version = "2.0", features = ["full"] }
uuid = { version = "1.18", features = ["v4"] }
[workspace.lints.clippy]
allow_attributes = "warn"
