[package]
name = "component-macro"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]

itertools = "0.10.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0.104"
toml = "0.7.2"
[dependencies.json]
version = "0.12.4"
