[package]
name = "component"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

component-macro = { path = "../component-macro" }

inventory.workspace = true
log.workspace = true
[build-dependencies]

json = "0.12.4"
