[package]
name = "init-stage"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

component = { path = "../../../component" }
foo = { path = "foo" }

log = "0.4"
simple_logger = "4.0.0"
[workspace]
members = [
    "foo",
]
