[package]
name = "second-init"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

first-init = {path = "../first-init"}

component = {path="../../../../component"}
log = "0.4"
[dev-dependencies]

simple_logger = "4.0.0"
